--- a/requirement.yml
+++ b/requirement.yml
@@ -1,4 +1,4 @@
 ---
-- src: https://github.com/ansarpalakottal/test.git
+- src: https://github.com/ansarpalakottal/test
   scm: git
   name: ansar_test
